# PyLoader

./: .gitignore  CMakeLists.txt  Debug.bat  OpcodesList.txt  PyLoader.sln  README.md  ReadMe.md  Release.bat  SUMMARY.md  premake5.lua  undefined.md
.github/workflows/: build.yml  main.yml
PyLoader/: CSoundSystem.cpp  CSoundSystem.h  DllMain.cpp  PyEvents.cpp  PyEvents.h  PyEventsInternal.h  PyLoader.cpp  PyLoader.h  PyLoader.vcxproj  PyLoader.vcxproj.filters  PyUtils.cpp  PyUtils.h  ScriptData.hpp  opcodes.txt  pch.h
PyLoader/examples/: CreateCar.py  Message.py
PyLoader/libstd/: common.py  hud.py  pool.py  script.py
PyLoader/libstd/pybass3/: bass_channel.py  bass_stream.py  bass_tags.py  datatypes.py  pys2_song.py  song.py
PyLoader/libstd/pybass3/codes/: errors.py  tag.py
PyLoader/libstd/pybass3/structs/: info.py
PyLoader/python/: _elementtree.pyd  _msi.pyd  _queue.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
PyLoader/sdk/: PyBass.cpp  PyBass.h  PyCHud.cpp  PyCHud.h  PyCLEO.cpp  PyCLEO.h  PyCommon.cpp  PyCommon.h  PyEvents.cpp  PyEvents.h  PyInternal.cpp  PyInternal.h  PyMemory.cpp  PyMemory.h  PyOpcodes.cpp  PyOpcodes.h  PyOpcodesCLEO4.cpp  PyPool.cpp  PyPool.h  PyScript.cpp  PyScript.h
PyLoader/tools/: class.txt  commands.xml  gen code.py  gen vs code snnipets.py  header.txt  src.txt
api/: bass.md  cleo-module.md  common-module.md  events.md  hud-module.md  memory-module.md  pool-module.md  script-module.md
api/opcodes/: 1.md  10.md  11.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  README.md
bass/src/: dllmain.cpp  module.cpp  module.h  soundsystem.cpp  soundsystem.h  src.cpp
bass/tools/: premake5.lua
doc/: vs-code-extension.md
documentation/: extending-functionality.md
documentation/modules/: README.md  cleo-module.md  common-module.md  hud-module.md  memory-module.md  pool-module.md  script-module.md
examples/: CreateCar.py  Events.py  GamePool.py  Message.py  QuickTeleport.py  ReloadAll.py
memory/lib/: PyLoader.lib
memory/libs/: PyLoader.lib
memory/src/: dllmain.cpp  module.cpp  module.h  src.cpp
memory/tools/: premake5.lua  release.bat
misc/include/: bass.h
misc/src/: dllmain.cpp  module.cpp  module.h  src.cpp
misc/tools/: debug.bat  premake5.lua
opcodes/libs/: PyLoader.lib
opcodes/src/: dllmain.cpp  pyloader_sdk.h  src.cpp  src.h
opcodes/tools/: premake5.lua
resource/: python310._pth
runtime/: python38._pth
runtime/PyLoader/lib/: camera.py  ped.py  vehicle.py
runtime/PyLoader/libstd/: addition.py  bass.py  camera.py  cleo.py  common.py  events.py  hud.py  memory.py  opcodes.py  pool.py  script.py  vehicle.py  vk_codes.py
runtime/PyLoader/libstd/classes/: attractor.py  audio.py  bass.py  boat.py  car.py  car_generator.py  card_decks.py  checkpoint.py  clock.py  crane.py  credits.py  cutscene.py  enums.py  fx.py  garage.py  hud.py  kill_frenzy.py  memory.py  menu.py  mouse.py  object.py  path.py  ped.py  restart.py  script_fire.py  sequence.py  (+16 more)
runtime/PyLoader/python/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  winsound.pyd
src/: CSoundSystem.cpp  CSoundSystem.h  DllMain.cpp  PyEvents.cpp  PyEvents.h  PyEventsInternal.h  PyLoader.cpp  PyLoader.h  ScriptData.hpp  SoundSystem.cpp  dllmain.cpp  filewatcher.hpp  game.cpp  game.h  loader.cpp  loader.h  module.cpp  module.h  opcodehandler.hpp  pch.cpp  pch.h  pyloader_sdk.cpp  pyloader_sdk.h  scriptdata.hpp  sdk.cpp  sdk.h
src/modules/: core.cpp  core.h  stream.cpp  stream.h
src/sdk/: PyAddition.cpp  PyAddition.h  PyBass.cpp  PyBass.h  PyCHud.cpp  PyCHud.h  PyCLEO.cpp  PyCLEO.h  PyCommon.cpp  PyCommon.h  PyMemory.cpp  PyMemory.h  PyOpcodes.cpp  PyOpcodes.h  PyPool.cpp  PyPool.h  PyScript.cpp  PyScript.h
tools/: Debug.bat  Release.bat  Setup.bat  commands.xml  defs.txt  gen classes.py  gen code.py  gen doc redirects.py  gen python defs.py  gen vs code snnipets.py  premake5.lua  sa.json
tools/code gen/: cmds.c  file.json  gen function wrappers.py  hdr.c  src.cpp
(+68 files in other folders)
